--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -31,8 +31,8 @@ jobs:
 
       - name: Ensure ansible user has write permissions
         run: |
-          sudo chown -R ansible:ansible /home/ansible
-          sudo chmod -R 755 /home/ansible
+          chown -R ansible:ansible /home/ansible
+          chmod -R 755 /home/ansible
 
       - name: Download Inventory
         uses: actions/download-artifact@v4
