--- a/ansible/Dockerfile.prod
+++ b/ansible/Dockerfile.prod
@@ -5,7 +5,7 @@ RUN apt-get update -y && apt-get install -y openssh-client git \
     python3-dnspython python3-passlib python3-toml \
     build-essential python3-dev libffi-dev libssl-dev \
     libsasl2-dev libldap2-dev python3-pip \
-    unzip python3-setuptools
+    unzip python3-setuptools curl jq
 
 RUN useradd -ms /bin/bash ansible
 
