--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Download Inventory using GitHub API
         run: |
-          echo "Download URL: $(curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          echo "Download URL: $(curl -L -H "Authorization: token ${{ secrets.GHCR_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | jq -r '.artifacts[0].archive_download_url')"        
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | \
