--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -32,9 +32,10 @@ jobs:
       - name: Download Inventory using GitHub API
         run: |
           echo "Download URL: $(curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/CultureDevOps/aws-cdk-terraform-ansible/actions/artifacts" | jq -r '.artifacts[0].archive_download_url')"        
+            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | jq -r '.artifacts[0].archive_download_url')"        
           curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/CultureDevOps/aws-cdk-terraform-ansible/actions/artifacts" | \
+            -H "Accept: application/vnd.github.v3+json" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | \
             jq -r '.artifacts[0].archive_download_url' | \
             xargs -I {} curl -L -o /home/ansible/ansible-inventory.zip {}
         
