--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -26,18 +26,21 @@ jobs:
           eval $(ssh-agent -s)
           # Add the SSH private key to the agent
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
-          touch test_file
-          ls -la
-
-      - name: Download Inventory using GitHub API
+          
+      - name: Authenticate with GitHub CLI
         run: |
-          echo "Download URL: $(curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | jq -r '.artifacts[0].archive_download_url')"        
-          curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+          gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
+
+      - name: Get artifact download URL
+        run: |
+          asset=$(gh api /repos/${{ github.repository }}/actions/artifacts --jq ".artifacts[0].archive_download_url")
+          echo "Download URL: $asset"
+
+      - name: Download artifact
+        run: |
+          curl -L -o /home/ansible/ansible-inventory.zip "$asset" \
             -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | \
-            jq -r '.artifacts[0].archive_download_url' | \
-            xargs -I {} curl -L -o /home/ansible/ansible-inventory.zip {}
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"
         
       - name: Unzip Inventory File
         run: |
