--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Authenticate with GitHub CLI
         run: |
-          echo "$GH_TOKEN" | gh auth login --with-token
+          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
 
       - name: Get artifact download URL
         run: |
