--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -17,6 +17,7 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}      
       env:
         ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
 
@@ -32,7 +33,7 @@ jobs:
         run: |
           mkdir -p /home/ansible/.config
           export GH_CONFIG_DIR=/home/ansible/.config
-          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+          echo "$GH_TOKEN" | gh auth login --with-token
 
       - name: Get artifact download URL
         run: |
