--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -40,10 +40,19 @@ jobs:
           eval $(ssh-agent -s)
           # Add the SSH private key to the agent
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
-        
+
+      - name: Download Inventory using GitHub API
+        run: |
+          echo "Download URL: $(curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | jq -r '.artifacts[0].archive_download_url')"        
+          curl -L -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            "https://api.github.com/repos/${{ github.repository }}/actions/artifacts" | \
+            jq -r '.artifacts[0].archive_download_url' | \
+            xargs -I {} curl -L -o /home/ansible/ansible-inventory.zip {}
+
       - name: Move Inventory File      
         run: |
-          ls -l /home/ansible/inventory
+          ls -l /home/ansible
           cat /home/ansible/inventory/inventory.ini
           mv /home/ansible/inventory.ini /home/ansible/project/ansible/inventory/hosts
 
