--- a/ansible/Dockerfile.prod
+++ b/ansible/Dockerfile.prod
@@ -1,25 +1,18 @@
 FROM python:3.11-slim
 
-RUN apt-get update -y && apt-get install -y openssh-client git \
-    python3-future python3-ldap python3-netaddr \
-    python3-dnspython python3-passlib python3-toml \
-    build-essential python3-dev libffi-dev libssl-dev \
-    libsasl2-dev libldap2-dev python3-pip \
-    unzip python3-setuptools curl jq
+RUN apt-get update -y && apt-get install openssh-client git \
+                 python3-future python3-ldap python3-netaddr \
+                 python3-dnspython python3-passlib python3-toml \
+                 build-essential python3-dev libffi-dev libssl-dev \
+                 libsasl2-dev libldap2-dev python3-pip -y
 
 RUN useradd -ms /bin/bash ansible
 
 # USER ansible
 
-# RUN mkdir -p /home/ansible/.ssh && \
-#     chmod 700 /home/ansible/.ssh
+WORKDIR /home/ansible
 
-# ENV PATH=$PATH:/home/ansible/.local/bin
 ENV PATH=$PATH:/root/.local/bin
-RUN pip3 install --upgrade debops[ansible]
-
-WORKDIR /home/ansible/project
-
-# COPY ./project .
+RUN pip3 install --user --upgrade debops[ansible]
 
 CMD ["bash"]
