--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -17,6 +17,7 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}      
       env:
          ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
+         ANSIBLE_CONFIG: ansible/project/ansible.cfg
     steps:
       - uses: actions/checkout@v4
 
