--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -17,7 +17,7 @@ jobs:
         password: ${{ secrets.GHCR_TOKEN }}      
       env:
          ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
-         ANSIBLE_CONFIG: ansible/project/ansible.cfg
+         ANSIBLE_CONFIG: ./ansible.cfg
     steps:
       - uses: actions/checkout@v4
 
@@ -65,6 +65,6 @@ jobs:
       - name: Run Ansible Bootstrap
         working-directory: ansible/project
         run: |
-          ls -l
+          ls -la
           pwd
-          debops run bootstrap -l amazon -e 'ansible_user=admin'
+          debops run bootstrap -l amazon
