--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -67,4 +67,6 @@ jobs:
         run: |
           ls -la
           pwd
+          pip3 show debops
+          which debops
           debops run bootstrap -l amazon
