--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -16,8 +16,6 @@ jobs:
       PATH: /home/runner/.local/bin:$PATH
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
       - name: Install System Dependencies
         run: |
@@ -26,7 +24,10 @@ jobs:
             python3-future python3-ldap python3-netaddr \
             python3-dnspython python3-passlib python3-toml \
             build-essential python3-dev libffi-dev libssl-dev \
-            libsasl2-dev libldap2-dev python3-pip
+            libsasl2-dev libldap2-dev python3-pip tar
+
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
       - name: Install DebOps
         run: |
