--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -16,15 +16,18 @@ jobs:
       PATH: /home/runner/.local/bin:$PATH
 
     steps:
-
-      - name: Install System Dependencies
-        run: |
-          apt-get update -y
-          apt-get install -y openssh-client git \
-            python3-future python3-ldap python3-netaddr \
-            python3-dnspython python3-passlib python3-toml \
-            build-essential python3-dev libffi-dev libssl-dev \
-            libsasl2-dev libldap2-dev python3-pip tar
+      - uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: openssh-client git python3-future python3-ldap python3-netaddr python3-dnspython python3-passlib python3-toml build-essential python3-dev libffi-dev libssl-dev libsasl2-dev libldap2-dev python3-pip tar
+          version: 1.0
+      # - name: Install System Dependencies
+      #   run: |
+      #     apt-get update -y
+      #     apt-get install -y openssh-client git \
+      #       python3-future python3-ldap python3-netaddr \
+      #       python3-dnspython python3-passlib python3-toml \
+      #       build-essential python3-dev libffi-dev libssl-dev \
+      #       libsasl2-dev libldap2-dev python3-pip tar
 
       - name: Checkout Repository
         uses: actions/checkout@v4
