--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -10,37 +10,24 @@ on:
 jobs:
   debops:
     runs-on: ubuntu-latest
-    env:
-      ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
-      ANSIBLE_CONFIG: ./ansible.cfg
-      PATH: /home/runner/.local/bin:$PATH
-
+    container:
+      image: ghcr.io/${{ inputs.owner_lc }}/ansible:latest
+      credentials:
+        username: ${{ github.actor }}
+        password: ${{ secrets.GHCR_TOKEN }}      
+      env:
+         ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
+         ANSIBLE_CONFIG: ./ansible.cfg
+         PATH: /home/runner/.local/bin:$PATH
     steps:
-      - uses: awalsh128/cache-apt-pkgs-action@latest
-        with:
-          packages: openssh-client git python3-future python3-ldap python3-netaddr python3-dnspython python3-passlib python3-toml build-essential python3-dev libffi-dev libssl-dev libsasl2-dev libldap2-dev python3-pip tar
-          version: 1.0
-      # - name: Install System Dependencies
-      #   run: |
-      #     apt-get update -y
-      #     apt-get install -y openssh-client git \
-      #       python3-future python3-ldap python3-netaddr \
-      #       python3-dnspython python3-passlib python3-toml \
-      #       build-essential python3-dev libffi-dev libssl-dev \
-      #       libsasl2-dev libldap2-dev python3-pip tar
-
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Install DebOps
-        run: |
-          pip3 install --user --upgrade debops[ansible]
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
-          debops --version
+      - uses: actions/checkout@v4
 
       - name: Set up SSH agent
+        working-directory: /home/ansible/project
         run: |
+          # Start the SSH agent
           eval $(ssh-agent -s)
+          # Add the SSH private key to the agent
           echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
 
       - name: Download Inventory Artifact
@@ -50,17 +37,23 @@ jobs:
 
       - name: Move Inventory File      
         run: |
-          ls -l
+          ls -l 
           pwd
           cat inventory.ini
-          mkdir -p ./ansible/inventory/
-          mv inventory.ini ./ansible/inventory/hosts
+          mv inventory.ini /home/ansible/project/ansible/inventory/hosts
 
       - name: Prepare Ansible Configurations
+        working-directory: /home/ansible/project
         run: |
           bash add_known_hosts.sh
 
       - name: Run Ansible Bootstrap
+        working-directory: /home/ansible/project
         run: |
+          ls -la /github/home/
+          ls -la /github/home/.cache/
+          ls -la /github/home/.cache/pip
+          pwd
+          pip3 show debops
           which debops
           debops run bootstrap -l amazon
