--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up SSH agent
-        working-directory: /home/ansible/project
+        working-directory: ansible/project
         run: |
           # Start the SSH agent
           eval $(ssh-agent -s)
@@ -39,7 +39,7 @@ jobs:
           ls -l 
           pwd
           cat inventory.ini
-          mv inventory.ini /home/ansible/project/ansible/inventory/hosts
+          mv inventory.ini ansible/project/ansible/inventory/hosts
 
       - name: Prepare Ansible Configurations
         working-directory: /home/ansible/project
@@ -47,11 +47,8 @@ jobs:
           bash add_known_hosts.sh
 
       - name: Run Ansible Bootstrap
-        working-directory: /home/ansible/project
+        working-directory: ansible/project
         run: |
-          ls -la /github/home/
-          ls -la /github/home/.cache/
-          ls -la /github/home/.cache/pip
           pwd
           pip3 show debops
           which debops
