--- a/ansible/Dockerfile.prod
+++ b/ansible/Dockerfile.prod
@@ -12,7 +12,7 @@ RUN useradd -ms /bin/bash ansible
 
 WORKDIR /home/ansible
 
-ENV PATH=$PATH:/root/.local/bin
+ENV PATH=$PATH:/root/.local/bin:/home/runner/.local/bin:$PATH
 RUN pip3 install --user --upgrade debops[ansible]
 
 WORKDIR /home/ansible/project
