--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -18,13 +18,15 @@ jobs:
     steps:
       - name: Install System Dependencies
         run: |
+          apt update -y 
+          apt install -y sudo
           sudo apt-get update -y
           sudo apt-get install -y openssh-client git \
             python3-future python3-ldap python3-netaddr \
             python3-dnspython python3-passlib python3-toml \
             build-essential python3-dev libffi-dev libssl-dev \
             libsasl2-dev libldap2-dev python3-pip tar
-                
+
       - name: Checkout Repository
         uses: actions/checkout@v4
 
