--- a/.github/workflows/run-debops.yml
+++ b/.github/workflows/run-debops.yml
@@ -10,6 +10,8 @@ on:
 jobs:
   debops:
     runs-on: ubuntu-latest
+    container:
+      image: ubuntu:22.04    
     env:
       ANSIBLE_USER_SSH_PUBLIC_KEY: ${{ secrets.ANSIBLE_USER_SSH_PUBLIC_KEY }}
       ANSIBLE_CONFIG: ./ansible.cfg
